--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,48 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "github workflow generator",
+            "type": "dart",
+            "request": "launch",
+            "cwd": "engine/src/",
+            "program": "flutter/tools/pkg/github_workflow_generator/bin/run.dart",
+            "args": [
+                "-i",
+                "flutter/ci/builders/mac_host_engine.json",
+                "-i",
+                "flutter/ci/builders/mac_ios_engine_no_ext_safe.json",
+                "-i",
+                "flutter/ci/builders/windows_host_engine.json",
+                "-i",
+                "flutter/ci/builders/windows_arm_host_engine.json",
+                "-i",
+                "flutter/ci/builders/linux_host_engine.json",
+                "-i",
+                "flutter/ci/builders/linux_host_desktop_engine.json",
+                "-i",
+                "flutter/ci/builders/linux_arm_host_engine.json",
+                "-i",
+                "flutter/ci/builders/windows_android_aot_engine.json",
+                "-i",
+                "flutter/ci/builders/mac_android_aot_engine.json",
+                "-i",
+                "flutter/ci/builders/linux_android_aot_engine.json",
+                "-i",
+                "flutter/ci/builders/linux_android_debug_engine.json",
+                "-i",
+                "flutter/ci/builders/linux_web_engine_build.json",
+                "-o",
+                "../../.github/workflows/build-and-upload-engine-artifacts.yml",
+            ]
+        },
+        {
+            "name": "Hello World (debug)",
+            "type": "dart",
+            "request": "launch",
+            "cwd": "examples/hello_world",
+            "program": "lib/main.dart",
+        },
+        {
             "name": "Hello World (host arm64, debug)",
             "type": "dart",
             "request": "launch",
